# sentiment

./: README.md  pyproject.toml
sentiment/: main.py
